--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-camera": "^3.44.1",
-    "react-native-image-picker": "^4.0.3"
+    "react-native-image-picker": "^4.0.3",
+    "react-native-qrcode-scanner": "^1.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
